--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -30,7 +30,7 @@ nav {
     font-weight: bold;
     cursor: pointer;
     text-decoration: inherit;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 
 #navbar-list-id {
@@ -140,7 +140,6 @@ nav {
         width: max-content;
         align-items: right;
         float: none;
-        font-size: 1.1em;
     }
 
     .navbar-item:hover {
